--- a/src/application/CT_scene2.fxml
+++ b/src/application/CT_scene2.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.ScatterChart?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CT_Chart">
@@ -14,5 +15,6 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </ScatterChart>
+      <Button layoutX="273.0" layoutY="360.0" mnemonicParsing="false" onAction="#Exit" text="Exit" />
    </children>
 </AnchorPane>
