--- a/src/application/LM_Scene2.fxml
+++ b/src/application/LM_Scene2.fxml
@@ -4,14 +4,25 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="TA1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LM_showfit">
    <children>
-      <Label fx:id="l1" layoutY="14.0" prefHeight="70.0" prefWidth="1000.0" text="model" />
-      <Label fx:id="variableSelectionWarn" layoutX="6.0" layoutY="99.0" prefHeight="300.0" prefWidth="666.0" text="Label" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="334.0" AnchorPane.topAnchor="100.0" />
+      <Label fx:id="l1" alignment="CENTER" layoutY="14.0" prefHeight="70.0" prefWidth="1000.0" text="model">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+      <Label fx:id="variableSelectionWarn" alignment="TOP_LEFT" layoutX="6.0" layoutY="99.0" prefHeight="300.0" prefWidth="666.0" text="Label" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="334.0" AnchorPane.topAnchor="100.0">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
       <Button layoutX="941.0" layoutY="310.0" mnemonicParsing="false" onAction="#refit" text="ReFit" />
       <TextField fx:id="removeVariable" layoutX="711.0" layoutY="238.0" prefHeight="60.0" prefWidth="288.0" />
-      <Text layoutX="711.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Which variable to remove : " />
+      <Text layoutX="711.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Which variable to remove : ">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Button layoutX="473.0" layoutY="361.0" mnemonicParsing="false" onAction="#Exit" text="Exit" />
    </children>
 </AnchorPane>
